@@ -248,11 +248,18 @@ Most develpment tools use relocatable objects for these reasons.
 \end_layout
 
 \begin_layout Section
-Supported processors 
+Supported processors
+\begin_inset CommandInset label
+LatexCommand label
+name "sec:Supported-processors"
+
+\end_inset
+
+ 
 \end_layout
 
 \begin_layout Standard
-The gputils currently supports most processors supported by MPLABX v3.00.
+The gputils currently supports most processors supported by MPLABX v3.05.
  This includes the following processors:
 \begin_inset Newline newline
 \end_inset
@@ -902,7 +909,7 @@ gpasm
 \begin_layout Section
 Running gpasm
 \begin_inset Index idx
-status collapsed
+status open
 
 \begin_layout Plain Layout
 gpasm options
@@ -2076,7 +2083,7 @@ Set the strict level of the recommended instruction-parameters (W or F and
 \begin_layout Standard
 \noindent
 \begin_inset Tabular
-<lyxtabular version="3" rows="6" columns="3">
+<lyxtabular version="3" rows="7" columns="3">
 <features rotate="0" tabularvalignment="middle">
 <column alignment="left" valignment="top" width="3.5cm">
 <column alignment="left" valignment="top" width="7.4cm">
@@ -2194,7 +2201,36 @@ If this is set, then an option may not be parameter of an another option.
 \begin_inset Text
 
 \begin_layout Plain Layout
-Print gpasm version information and exit.
+Use absolute paths.
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+-v
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+--version
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+Show version information and exit.
 \end_layout
 
 \end_inset
@@ -5478,7 +5514,7 @@ See also: BANKSEL, PAGESEL
 \begin_layout Subsection*
 BANKSEL
 \begin_inset Index idx
-status collapsed
+status open
 
 \begin_layout Plain Layout
 BANKSEL
@@ -5509,7 +5545,7 @@ See also: BANKISEL, PAGESEL
 \begin_layout Subsection*
 CONFIG
 \begin_inset Index idx
-status collapsed
+status open
 
 \begin_layout Plain Layout
 CONFIG
@@ -5553,7 +5589,7 @@ See also: __CONFIG
 \begin_layout Subsection*
 CBLOCK
 \begin_inset Index idx
-status collapsed
+status open
 
 \begin_layout Plain Layout
 CBLOCK
@@ -5591,7 +5627,7 @@ See also: EQU
 \begin_layout Subsection*
 CODE
 \begin_inset Index idx
-status collapsed
+status open
 
 \begin_layout Plain Layout
 CODE
@@ -5630,7 +5666,7 @@ See also: IDATA, UDATA, CODE_PACK
 \begin_layout Subsection*
 CODE_PACK
 \begin_inset Index idx
-status collapsed
+status open
 
 \begin_layout Plain Layout
 CODE
@@ -7143,7 +7179,7 @@ Selects the target processor.
  See section 
 \begin_inset CommandInset ref
 LatexCommand ref
-reference "sec:processors"
+reference "sec:Supported-processors"
 
 \end_inset
 
@@ -7157,7 +7193,7 @@ See also: LIST
 \begin_layout Subsection*
 RADIX
 \begin_inset Index idx
-status collapsed
+status open
 
 \begin_layout Plain Layout
 RADIX
@@ -11318,7 +11354,7 @@ The selected processor is not valid.
  Check the processors listed in section 
 \begin_inset CommandInset ref
 LatexCommand ref
-reference "sec:processors"
+reference "sec:Supported-processors"
 
 \end_inset
 
@@ -14299,7 +14335,7 @@ gpvc is cod file viewer for gputils.
 \begin_layout Subsection
 Running gpvc
 \begin_inset Index idx
-status collapsed
+status open
 
 \begin_layout Plain Layout
 Running gpvc
